@@ -919,7 +919,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(double value) throws JSONException
 	{
-		Double d = new Double(value);
+		Double d = Double.valueOf(value);
 		JSONObject.testValidity(d);
 		put(d);
 		return this;
@@ -934,7 +934,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(int value)
 	{
-		put(new Integer(value));
+		put(Integer.valueOf(value));
 		return this;
 	}
 
@@ -947,7 +947,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(long value)
 	{
-		put(new Long(value));
+		put(Long.valueOf(value));
 		return this;
 	}
 
@@ -1033,7 +1033,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(int index, double value) throws JSONException
 	{
-		put(index, new Double(value));
+		put(index, Double.valueOf(value));
 		return this;
 	}
 
@@ -1052,7 +1052,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(int index, int value) throws JSONException
 	{
-		put(index, new Integer(value));
+		put(index, Integer.valueOf(value));
 		return this;
 	}
 
@@ -1071,7 +1071,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(int index, long value) throws JSONException
 	{
-		put(index, new Long(value));
+		put(index, Long.valueOf(value));
 		return this;
 	}
 
